Fix whitespace problem

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@ body,
   height: 100vh;
   width: 100vw;
   min-height: 600px;
-  min-width: 400px;
   position: absolute;
   top: 0;
   overflow: hidden;
